force-app/main/default/objects/IndividualGDPRState__dll.object
<CustomObject>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>CreatedBy</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>CreatedDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSourceObject</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSource</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutProcessing__c</fullName>
        <label>Do Not Process</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>HasOptedOutProcessing</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>Id</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <primaryIndexOrder>1</primaryIndexOrder>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <label>Individual Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>IndividualId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>LastModifiedBy</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>LastModifiedDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestCompletionDate__c</fullName>
        <label>Opt Out Process Request Completion Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>OptOutProcessRequestCompletionDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestDate__c</fullName>
        <label>Opt Out Process Request Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>OptOutProcessRequestDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestCompletionDate__c</fullName>
        <label>SendIndividualDataRequestCompletionDate</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>SendIndividualDataRequestCompletionDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestDate__c</fullName>
        <label>Send Individual Data Request Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>SendIndividualDataRequestDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualData__c</fullName>
        <label>Export Individual&apos;s Data</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>SendIndividualData</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestCompletionDate__c</fullName>
        <label>Should Forget Request Completion Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>ShouldForgetRequestCompletionDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestDate__c</fullName>
        <label>Should Forget Request Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>ShouldForgetRequestDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForget__c</fullName>
        <label>Forget This Individual</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>ShouldForget</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>Tenant Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>TenantId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataLakeAttributes>
        <creationType>System</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>